--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Noel Aguirre",
+  "author": "Diego Canteo",
   "license": "MIT",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
